# Ichiyanagi-V1

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md
docs/: SPEC.md
examples/: compile_demo.ich  features.ich  hello.ich  spec_sample.ich  stdlib.ich
src/: ast.c  ast.h  codegen.c  codegen.h  common.c  common.h  error.c  error.h  interp.c  interp.h  lexer.c  lexer.h  main.c  module.c  module.h  parser.c  parser.h  value.c  value.h
tests/: run_codegen_tests.sh  run_tests.sh
